added backend and make some pages fully working implemented backeddn also

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -102,6 +102,7 @@ nav {
         }
 
         .register {
+            height: max-content;
             background-color: #fece51;
         }
         .menuIcon{
