--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    //To make the data unselectable Will uncomment when the website is ready 
+    // user-select: none
 }
 
 * {
